Just some slight corrections

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
             <div class="hero-image">
                 <img src="./images/motherandchild.webp" alt="Mother and Child">
             </div>
+            
         </section>
+        <div class="contact-us">
+            <a href="./pages/Contact.html" class="btn-primary">Talk to us</a>
+        </div>
       </main>
      
 
