--- a/pages/Services.html
+++ b/pages/Services.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <!-- Navbar -->
-    <div id="navbar"></div>
+    <div id="navbar">
+    </div>
 
     <!-- Services Section -->
     <main>
